--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "select-paragraph",
-    "displayName": "Select Paragraph",
-    "description": "Select contiguous lines until you reach an empty line",
-    "version": "0.1.1",
-    "publisher": "nachocab",
+    "name": "select-connected-comments",
+    "displayName": "Select Connected Comments",
+    "description": "Select contiguous comments until you reach an empty line",
+    "version": "0.1",
+    "publisher": "e0289033",
     "engines": {
         "vscode": "^1.15.0"
     },
@@ -11,20 +11,20 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:select-paragraph.selectParagraph"
+        "onCommand:select-comments.selectComments"
     ],
     "main": "./extension",
     "contributes": {
         "commands": [
             {
-                "command": "select-paragraph.selectParagraph",
-                "title": "Select Paragraph"
+                "command": "select-comments.selectComments",
+                "title": "Select Comments"
             }
         ],
         "keybindings": [
             {
-                "command": "select-paragraph.selectParagraph",
-                "key": "ctrl+p",
+                "command": "select-comments.selectComments",
+                "key": "ctrl+shift+c",
                 "when": "editorTextFocus"
             }
         ]
@@ -43,7 +43,7 @@
     },
     "repository": {
       "type": "git",
-      "url": "https://github.com/nachocab/vscode-select-paragraph"
+      "url": "https://github.com/e0289033/vscode-select-comments"
     },
     "extensionKind": "ui"
 }
