--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Select Comment",
     "description": "Select contiguous comments until you reach an empty line",
     "version": "0.1.1",
-    "publisher": "e0289033",
+    "publisher": "lolokingdurock",
     "engines": {
         "vscode": "^1.15.0"
     },
