feat(v0.1.4): corrected shortcut who was used by vscode

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "keybindings": [
             {
                 "command": "select-comment.selectComment",
-                "key": "ctrl+p",
+                "key": "ctrl+alt+p",
                 "when": "editorTextFocus"
             }
         ]
